--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Documents</title>
 </head>
 <body>
+    <nav>
+        <p>Minha página</p>
+            <ul>
+                <li>SERVIÇOS</li> 
+                <li>CLIENTES</li>
+                <li>PARCEIROS</li>
+                <li>TIME</li>
+                <li>CONTATOS</li>               
+            </ul>
+    </nav>
+    <p>Minha primeira página</p>
+
+    <header>
+        <h1>Minha página</h1>
+        <p>Oferecemos os melhores sites e apps para sua empresa</p>
+    </header>
+
+    <section id="servicos">
+        <h2>SERVIÇOS</h2>
+        <p>Oferecemos os melhores s ites e apps para sua empresa</p>
+        <img src="img/pexels-cottonbro-studio-4709285.jpg" width="300px">
+    </section>
+
+    <section id="clientes">
+        <h2>CLIENTES</h2>
+        <p>Nossos clientes ficaram satisfeitos com nossos serviços</p>
+        <img src="/img/pexels-fauxels-3184423.jpg" width="300px" height="280px">
+    </section>
     
+    <footer>
+        <p><p>Desenvolvido por Bruno Mattos</p>
+ 
 </body>
+
+
 </html>
