--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documents</title>
+    <title>Gomes7 Tech</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <nav>
-        <p>Minha página</p>
+        <p>Gomes7 Tech</p>
+            <section>
+                <img src="/img/logo_g7.jpeg" width="50px" class="img_logo">
+            </section>
             <ul>
-                <li>SERVIÇOS</li> 
-                <li>CLIENTES</li>
-                <li>PARCEIROS</li>
-                <li>TIME</li>
-                <li>CONTATOS</li>               
+                <li><a href="#servicos">SERVIÇOS</a></li> 
+                <li><a href="#clientes">CLIENTES</a></li>
+                <li><a href="#parceiros">PARCEIROS</a></li>
+                <li><a href="#contatos">CONTATOS</a></li>               
             </ul>
     </nav>
+    
     <p>Minha primeira página</p>
 
     <header>
@@ -26,19 +30,51 @@
 
     <section id="servicos">
         <h2>SERVIÇOS</h2>
-        <p>Oferecemos os melhores s ites e apps para sua empresa</p>
-        <img src="img/pexels-cottonbro-studio-4709285.jpg" width="300px">
+            <p>Oferecemos os melhores sites e apps para sua empresa</p>
+                <div>
+                    <img src="img/service.jpg" width="300px" height="300px">
+                </div>
     </section>
 
     <section id="clientes">
         <h2>CLIENTES</h2>
-        <p>Nossos clientes ficaram satisfeitos com nossos serviços</p>
-        <img src="/img/pexels-fauxels-3184423.jpg" width="300px" height="280px">
+            <p>Nossos clientes ficaram satisfeitos com nossos serviços</p>
+                <div>    
+                    <img src="/img/cliente.jpg" width="300px" height="300px">
+                </div>
+                <div>
+                    <img src="/img/cliente2.jpg" width="300px" height="300px">
+                </div>
+    </section>
+
+    <section id="parceiros">
+        <h2>PARCEIROS</h2>
+            <p>Nossos parceiros:</p>
+                <div>
+                   <img src="/img/microsoft.jpg" width="300px" height="300px">     
+                </div>
+                <div>
+                    <img src="/img/apple.jpg" width="300px" height="300px">     
+                </div>
+    </section>
+
+    <section id="contatos">
+        <h2>CONTATOS</h2>
+            <p>Nossos contatos:</p>
+            <div>
+                <img src="/img/email.jpg" width="30px" height="30px" class="img_email">
+                <p><a href="mailto:contato@gomes7tech.com">contato@gomes7tech.com</a></p>
+            </div>
+
+            <div>
+                <img src="/img/telefone.png" width="30px" height="30px" class="img_fone">
+                <p>(99) 99999-9999</p>
+            </div>
     </section>
     
     <footer>
-        <p><p>Desenvolvido por Bruno Mattos</p>
- 
+        <p>Desenvolvido por Bruno Mattos</p>
+    </footer>
 </body>
 
 
