inclusao dos butoes animados

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </section>
             
             <ul class="nav-list">
-                <li class="service"><a href="#servicos">SERVIÇOS</a></li> 
-                <li class="clientes"><a href="#clientes">CLIENTES</a></li>
+                <li class="service"><a href="#servicos">PRODUTOS</a></li> 
+                <li class="clientes"><a href="#coments">COMENTÁRIOS</a></li>
                 <li class="parceiros"><a href="#parceiros">PARCEIROS</a></li>
                 <li class="contatos"><a href="#contatos">CONTATOS</a></li>               
             </ul>
@@ -35,6 +35,9 @@
                         <img src="img/i7.jfif" alt="">
                         <div class="descricao">
                             <h2>I7 10700K</h2>
+                            <div class="botao">
+                               <button><a href="https://www.kabum.com.br/produto/158285/processador-intel-core-i7-10700-cache-16mb-2-90ghz-4-8ghz-turbo-lga1200-bx8070110700?gclid=CjwKCAiAqaWdBhAvEiwAGAQltqdPMtpPtdxrNdcgkkxxi-WO12763gHuBtf1zJQcj-bnuKKVbV613RoChAIQAvD_BwE" target="_blank">Compre agora!</a></button>
+                            </div>
                         </div>     
                         </div>
                         </div>
@@ -46,6 +49,9 @@
                             <img src="img/ssdg.webp" alt="">
                                 <div class="descricao">
                                     <h2>SSD Goldenfir </h2>
+                                    <div class="botao">
+                                        <button><a href="https://www.amazon.com.br/Disco-R%C3%ADgido-ssd-Goldenfir-Interface/dp/B097LTPQCH/ref=asc_df_B097LTPQCH/?tag=googleshopp00-20&linkCode=df0&hvadid=379725879822&hvpos=&hvnetw=g&hvrand=4776132606062021602&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9100896&hvtargid=pla-1639320557956&th=1" target="_blank">Compre agora!</a></button>
+                                     </div>
 
                                 </div>   
                              </div>     
