correção do button enviar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </section>
             
             <ul class="nav-list">
-                <li class="service"><a href="#servicos">PRODUTOS</a></li> 
+                <li class="service"><a href="#service">PRODUTOS</a></li> 
                 <li class="clientes"><a href="#coments">COMENTÁRIOS</a></li>
                 <li class="contatos"><a href="#contatos">CONTATOS</a></li>               
             </ul>
@@ -121,7 +121,7 @@
                 <textarea name="message" cols="30" rows="10" placeholder="Digite sua mensagem" required></textarea>
                 <button type="submit">Enviar</button>
                 <input type="hidden" name="accessKey" value="042be0d3-84fa-4ae8-aaed-2434cda72cac">
-                <input type="hidden" name="redirectTo" value="http://127.0.0.1:5501/obrigado.html">
+                <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/obrigado.html">
             </form>
     </div>
         </section>
